contrib/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1 
  labels:
    app: app1 
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: app1
        image: thejustinellis/demoapp-fr:latest
        resources:
          requests: 
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 4567
