contrib/k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: app1
  namespace: default
spec:
  type: NodePort
  selector:
    app: app1
  ports:
  - port: 4567
    protocol: TCP
    targetPort: 4567
